# weather-analysis

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
dashboard/: app.py
deploy/: weather-analysis.env.example
docs/superpowers/plans/: 2026-07-14-long-term-history.md
docs/superpowers/specs/: 2026-07-14-long-term-history-design.md
tests/: test_analysis.py  test_collect.py  test_collectors.py  test_config.py  test_db.py  test_validate.py
weather_analysis/: __init__.py  analysis.py  cli.py  collect.py  config.py  db.py  demo.py  validate.py
weather_analysis/collectors/: home_assistant.py  home_assistant_stats.py  open_meteo.py
