[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-analysis"
version = "0.1.0"
description = "Collect outside weather (Open-Meteo) and Home Assistant sensor data, analyse them with interactive graphs"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "requests>=2.31",
    "PyYAML>=6.0",
    "pandas>=2.0",
    "plotly>=5.18",
    "streamlit>=1.30",
    "websocket-client>=1.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
weather-analysis = "weather_analysis.cli:main"

[tool.setuptools.packages.find]
include = ["weather_analysis*"]
